--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
         let polygonLocation;
         let polygons;
         let polygonAppUrl = "https://script.google.com/macros/s/AKfycbyJqhYZb4aophEnTYXwd62Re8pCWiE5_1qli8oBpK2PzfE20die8jVcG-OrRhTBh4uuZQ/exec";
+        // Points
+        let pointLocation;
+        let points;
+        let pointAppUrl = "https://script.google.com/macros/s/AKfycbzP3u_Qo8bJjJhP0l1DkJ941sZZAekr8XwiytOmpOZaWLACyszFVlz7pSK3yXXSc91iOw/exec";
 
         // Function to load lines from Google sheet
         function reloadLineLayer(){
@@ -154,8 +158,35 @@
           })
         };
 
+        // Function to load points from Google sheet
+        function reloadPointsLayer(){
+          // Perform a HTTP GET request, which should return our GeoJson.
+          fetch(pointAppUrl)
+          .then(response => response.json())
+          .then(data => {
+            // If the map has the points layer, remove it.
+            if(map.hasLayer(points)){
+              map.removeLayer(points)
+            }
+            // Redefine the points layer, and add to the map.
+            points = L.geoJson(data, {
+              onEachFeature: function(feature, layer){
+                if (feature.properties && feature.properties.name && feature.properties.year && feature.properties.description) {
+                  layer.bindPopup(
+                    "Name: " + feature.properties.name +
+                    "<br>Year: " + feature.properties.year +
+                    "<br>Description: " + feature.properties.description
+                  );
+                }
+              }
+            })
+            map.addLayer(points);
+          })
+        };
+
         reloadLineLayer();
         reloadPolygonLayer();
+        reloadPointsLayer();
         // END IMPORT GOOGLE SHEETS DATA CODE
 
 
@@ -229,8 +260,6 @@
               }
 
             };
-
-            console.log(polyGroup);
 
             // download each file as geojson and convert to csv if data exist
             if (lineGroup.features.length > 0) {
@@ -343,8 +372,49 @@
               //downloadObjectAsJson(polyGroup, 'polyData');
 
             } if (pointGroup.features.length > 0) {
-              json2csv(pointGroup);
-              downloadObjectAsJson(pointGroup, 'pointData');
+
+              // for each point...
+              for (var x = 0; x < pointGroup.features.length; x++) {
+
+                //THE FOLLOWING CODE POSTS DATA TO GOOGLE SHEETS
+                // define each point
+                let eachPoint = pointGroup.features[x];
+                // get the coordinates
+                let pointCoords = eachPoint.geometry.coordinates;
+                // get the name input
+                let pointName = eachPoint.properties.name;
+                // get the year input
+                let pointYear = eachPoint.properties.year;
+                // get the description input
+                let pointDescription = eachPoint.properties.description;
+                // process the coordinate pairs by adding them to a string
+                let stringCoords = '"[' + pointCoords + ']"';
+                // parse these into the proper format for the Google sheet
+                let finalCoords = JSON.parse(stringCoords);
+                // Add URL parameters to the base URL
+                url = pointAppUrl + `?coordinates=${finalCoords}`
+                // if the user added a name, add it to the url
+                if (pointName.length > 0) {
+                  url += `&name=${pointName}`;
+                }
+                // if the user added a year, add it to the url
+                if (pointYear.length > 0) {
+                  url += `&year=${pointYear}`;
+                }
+                // if the user added a description, add it to the url
+                if (pointDescription.length > 0) {
+                  url += `&description=${pointDescription}`;
+                }
+                // Post the request to the server with a HTTP POST request
+                fetch(url, {
+                  method: 'POST'
+                });
+                //END POST TO GOOGLE SHEETS
+
+              }
+
+              //json2csv(pointGroup);
+              //downloadObjectAsJson(pointGroup, 'pointData');
             }
 
         };
@@ -400,7 +470,7 @@
           });
           layer.bindPopup(form).openPopup();
         };
-
+/*
         // a function to download the digitized data in geojson files
         function downloadObjectAsJson(exportObj, exportName){
           const dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(exportObj));
@@ -422,7 +492,7 @@
           ].join('\r\n');
           console.log(csv);
         };
-
+*/
     </script>
 
 </body>
