--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
             cursor: pointer;
             font-size:12px;
             text-decoration:none;
+          	border: 1px solid #AAA;
         }
         #export {
             top:90px;
+        }
+        #delete:hover, #export:hover {
+          background-color: #f8f8f8;
         }
     </style>
 </head>
@@ -123,6 +127,18 @@
                     "<br>Year: " + feature.properties.year +
                     "<br>Description: " + feature.properties.description
                   );
+                  layer.on('mouseover', function(){
+                    this.openPopup();
+                    this.setStyle({
+                      color: 'yellow'
+                    });
+                  });
+                  layer.on('mouseout', function() {
+                    this.closePopup();
+                    this.setStyle({
+                      color: '#0033ff'
+                    });
+                  });
                 }
               }
             })
@@ -149,6 +165,18 @@
                     "<br>Year: " + feature.properties.year +
                     "<br>Description: " + feature.properties.description
                   );
+                  layer.on('mouseover', function(){
+                    this.openPopup();
+                    this.setStyle({
+                      color: 'yellow'
+                    });
+                  });
+                  layer.on('mouseout', function() {
+                    this.invoke('closePopup');
+                    this.setStyle({
+                      color: '#0033ff'
+                    });
+                  });
                 }
               }
             })
@@ -175,6 +203,28 @@
                     "<br>Year: " + feature.properties.year +
                     "<br>Description: " + feature.properties.description
                   );
+                  layer.on('mouseover', function(e) {
+                    this.openPopup();
+                    e.target.setIcon(new L.icon({
+                      iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png',
+                      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+                      iconSize: [25, 41],
+                      iconAnchor: [12, 41],
+                      popupAnchor: [1, -34],
+                      shadowSize: [41, 41]
+                    }));
+                  });
+                  layer.on('mouseout', function(e) {
+                    this.closePopup();
+                    this.setIcon(L.icon({
+                      iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png',
+                      shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+                      iconSize: [25, 41],
+                      iconAnchor: [12, 41],
+                      popupAnchor: [1, -34],
+                      shadowSize: [41, 41]
+                    }));
+                  });
                 }
               }
             })
