--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               }
 
               //json2csv(polyGroup);
-              //downloadObjectAsJson(polyGroup, 'polyData');
+              downloadObjectAsJson(polyGroup, 'polyData');
 
             } if (pointGroup.features.length > 0) {
 
