auto width buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             font-size:12px;
             text-decoration:none;
           	border: 1px solid #AAA;
-            width: 80px;
+            width: auto;
         }
         #add {
             top:90px;
