change cursor to pointer on hover over clickable leaflet layer

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         #delete:hover, #add:hover, #export:hover {
           background-color: #f8f8f8;
         }
+        /* Change cursor when mousing over clickable layer */
+        .leaflet-clickable {
+          cursor: pointer !important;
+        }
     </style>
 </head>
 
